--- a/demo/example_index.html
+++ b/demo/example_index.html
@@ -16,9 +16,9 @@
   <script type="text/javascript">
     $(document).ready(function(){
       client = new Keen({
-        projectId: "putyourkeyhere",
-        readKey: "putyourkeyhere",
-        masterKey: "putyourkeyhere",
+        projectId: "55df52e9e08557169c200d01",
+        readKey: "af12bc76de28231d92b51a85b6c776aa5d55b0d85fb2a31f25b20ffd87771055bae4411aeb159a7055364a716a7a2a63d92c5dd6b50721f71467bbe07aaf8903ba5134bd0df1b533099b9c7c691cc55a9ffe0f3ce13d3ff3b35d9e553900f3b5a78635a152a9a73495e423aeaa8d5bef",
+        masterKey: "1FB0275CD2CD7CA9C8350F3793413A97",
         protocol: "https",
         host: "api.keen.io/3.0",
         requestType: "xhr"
@@ -29,7 +29,7 @@
       // with to be looked up at a later time. If you do not want to use persistence,
       // just do not include it in the Keen.DataTools.App initialization below
       // and the feature will not appear.
-      
+
       // Example usage:
       // var persistence = new Keen.DataTools.Persistence.REST({
       //   baseUrl: '/bookmarks'
